Read and write poms in the encoding their prolog declares
A pom declaring ISO-8859-1 and containing any non-ASCII byte - an accented name in
<developers>, a word in <description> - made readString throw
MalformedInputException, failing the goal on a file Maven parses without
complaint. save() had the mirror problem: it always wrote UTF-8, so the declared
encoding and the actual bytes could drift apart for content the plugin never
touched.

The prolog is now read out of the raw bytes as ISO-8859-1, which maps every byte
to a character and cannot itself fail, and the charset it names is used for both
the read and the write. Absent or unparseable prolog means UTF-8, as before.

Addresses review comment from @Jardo-51 on src/main/java/com/jardoapps/pao/pom/PomDocument.java:51.